--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<h1>hello world from anoop</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Hello world</title>
+  </head>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+  <body>
+
+  <div ng-app="">
+   
+  <p>Input something in the input box:</p>
+  <p>Name : <input type="text" ng-model="name" placeholder="Enter name here"></p>
+  <h1>Hello {{name}}</h1>
+
+  </div>
+
+  </body>
+</html>
